src/objects/PANG_Project__c.object
<CustomObject>
    <description>Used to group RWE Requests around a common quality</description>
    <fields>
        <fullName>Comparator_s__c</fullName>
        <label>Comparator(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Actual__c</fullName>
        <label>Completion Date Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Planned__c</fullName>
        <label>Completion Date Planned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>CDIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPORWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER (BIOMETRICS, REGULATORY ETC.)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intended_Disclosure_Type__c</fullName>
        <label>Intended Disclosure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conference Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journal Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Project_Number__c</fullName>
        <label>Legacy System Project Number</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Molecule__c</fullName>
        <label>Molecule</label>
        <picklist>
            <controllingField>Primary_Therapeutic_Area__c</controllingField>
            <picklistValues>
                <fullName>Abemaciclib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atomoxetine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAFF-17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baricitinib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basal insulin peglispro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blosozumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK4/6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cetuximab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGRP MAb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chk1 inh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c-Met inh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cMet-Mab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CXCR4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dulaglutide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duloxetine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edivoxetine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empagliflozin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferroportin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGF receptor inh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galunisertib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gemcitabine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glucagon-R antagonist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSK3-beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedgehog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepcidin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humulin U-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humulin U-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icrucumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL-23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulin Isophane</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Outcome_Measures__c</fullName>
        <label>Outcome Measures</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Objective__c</fullName>
        <label>Primary Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Therapeutic_Area__c</fullName>
        <description>Indicate the primary therapeutic area for project</description>
        <inlineHelpText>Indicate the primary therapeutic area for project</inlineHelpText>
        <label>Primary Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer’s &amp; Neurodegenerative Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatry &amp; Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoimmune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone, Muscle, Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Business Unit-Specific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Therapeutic_BU__c</fullName>
        <formula>CASE(  Primary_Therapeutic_Area__c  , &quot;&quot;,&quot;&quot;,&quot;Oncology&quot;, &quot;Oncology&quot;, &quot;Diabetes&quot;, &quot;Diabetes&quot;, &quot;Biomedicines&quot;)</formula>
        <label>Primary Therapeutic BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Concept__c</fullName>
        <label>Project Concept</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <inlineHelpText>IMPACT/BoB ID</inlineHelpText>
        <label>Project ID</label>
        <length>90</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Research_Question__c</fullName>
        <label>Project Research Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study - Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study - Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Objective__c</fullName>
        <label>Secondary Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_Actual__c</fullName>
        <label>Start Date Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_Planned__c</fullName>
        <label>Start Date Planned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Study_Description__c</fullName>
        <label>Study Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TPO_Activity__c</fullName>
        <label>TPO Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>RWE Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RWE Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>